<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightPurple"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/detail_poster_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/detail_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A0000000"
                android:gravity="center_vertical|center_horizontal"
                android:minLines="2"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/detail_poster_image"
                tools:text="@string/test_movie" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightPurple"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/plot"
                android:textColor="@color/colorWhitish"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plot_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="none"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="4dp"
                android:scrollHorizontally="false"
                android:textColor="@color/colorWhitish"
                android:textSize="16sp"
                tools:text="@string/test_plot" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/user_rating"
                    android:textColor="@color/colorWhitish"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:textColor="@color/colorWhitish"
                    android:textSize="16sp"
                    tools:text="@string/test_rating" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/release_date"
                    android:textColor="@color/colorWhitish"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:textColor="@color/colorWhitish"
                    android:textSize="16sp"
                    tools:text="@string/test_date" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
