<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.shola.popularmoviesapp.WelcomeActivity">


    <TextView
        android:id="@+id/the_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:padding="4dp"
        android:text="@string/title_movies"
        android:textAlignment="center"
        android:textColor="@color/colorWhitish"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/get_movies_list"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/the_title"
        android:layout_centerInParent="true"
        android:onClick="popularMovieButton"
        android:padding="21dp"
        android:text="@string/get_movies"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_movies_list"
        android:layout_centerInParent="true"
        android:onClick="aboutButton"
        android:padding="21dp"
        android:text="@string/about"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

</RelativeLayout>

